--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,500;1,400&display=swap');
+body{
+  font-family: 'Nunito';
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.SubmitButton{
+  background-color: #FE4A55;
   color: white;
+  font-size: larger;
+  font-weight: bold;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 7px;
+  -webkit-transition: background-color 2s ease-out;
+  -moz-transition: background-color 2s ease-out;
+  -o-transition: background-color 2s ease-out;
+  transition: background-color 2s ease-out;
+
+}
+.SubmitButton:hover{
+  background-color: #b5710a;
 }
 
-.App-link {
-  color: #61dafb;
+/* ============= Animation =====================  */
+
+.covid9{
+  animation: mymove 5s infinite;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes mymove {
+  50% {transform: rotate(180deg);}
 }
